--- a/source/stewgui.lpi
+++ b/source/stewgui.lpi
@@ -35,7 +35,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="stewgui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -132,6 +132,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="stewtypes"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="stewpersist.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="stewpersist"/>
+      </Unit15>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
