--- a/source/stewgui.lpi
+++ b/source/stewgui.lpi
@@ -5,7 +5,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="stew-gui"/>
+      <Title Value="Stew"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
