--- a/source/stewgui.lpi
+++ b/source/stewgui.lpi
@@ -17,7 +17,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="38"/>
+      <BuildNr Value="39"/>
       <StringTable CompanyName="Town's Edge Technology, LLC" FileDescription="A Notekeeping and Manuscript management tool." LegalCopyright="Copyright © 2015 Neil M. Sheldon" ProductName="Stew" ProductVersion="0.1"/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -36,7 +36,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="20">
+    <Units Count="21">
       <Unit0>
         <Filename Value="stewgui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -159,10 +159,15 @@
         <UnitName Value="gui_listdialog"/>
       </Unit18>
       <Unit19>
+        <Filename Value="sys_versionsupport.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="sys_versionsupport"/>
+      </Unit19>
+      <Unit20>
         <Filename Value="sys_localfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sys_localfile"/>
-      </Unit19>
+      </Unit20>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
