-- Reworked the packaging system to use the debhelper system.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ source/backup/
 distributable
 install/x86_64-linux/packaging-tutorial.en.pdf
 install/x86_64-linux/backup/
+install/debian/stew-gui-linux
+install/debian/stew-gui-linux.debhelper.log
+install/debian/stew-gui-linux.substvars
