-- Added icons to application and debian install -- Added in some unused code to sys_async which I may use in the future.

--- a/resources/shortcuts/Stew.desktop
+++ b/resources/shortcuts/Stew.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Version=1.0
-Name=Stew Manuscript Manager
+Name=Stew
+Comment=Stew Manuscript Manager
+Icon=stew-gui.png
 Categories=Office;
 Exec=stew-gui
 Hidden=false
