-- removed stewgui.lps, which is a IDE user settings file.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ install/x86_64-linux/backup/
 install/debian/stew-gui-linux
 install/debian/stew-gui-linux.debhelper.log
 install/debian/stew-gui-linux.substvars
+source/stewgui.lps
