-- removed .res file from version control, as it is created by lazarus and doesn't need to be managed.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ install/debian/stew-gui-linux
 install/debian/stew-gui-linux.debhelper.log
 install/debian/stew-gui-linux.substvars
 source/stewgui.lps
+source/stewgui.res
