--- a/source/stewtest.lpi
+++ b/source/stewtest.lpi
@@ -35,7 +35,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="13">
+    <Units Count="14">
       <Unit0>
         <Filename Value="stewtest.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -104,6 +104,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="sys_file"/>
       </Unit12>
+      <Unit13>
+        <Filename Value="sys_os.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="sys_os"/>
+      </Unit13>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
