--- a/source/stewgui.lpi
+++ b/source/stewgui.lpi
@@ -181,7 +181,16 @@
       <OtherUnitFiles Value="gui"/>
       <UnitOutputDirectory Value="../units"/>
     </SearchPaths>
+    <CodeGeneration>
+      <Checks>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+      </Checks>
+    </CodeGeneration>
     <Linking>
+      <Debugging>
+        <UseHeaptrc Value="True"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
