--- a/source/stewgui.lpi
+++ b/source/stewgui.lpi
@@ -17,7 +17,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="99"/>
+      <BuildNr Value="101"/>
       <StringTable CompanyName="Town's Edge Technology, LLC" FileDescription="A manuscript management and notekeeping tool." LegalCopyright="Copyright © 2015 Neil M. Sheldon" ProductName="Stew" ProductVersion="0.1"/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -39,7 +39,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="22">
+    <Units Count="24">
       <Unit0>
         <Filename Value="stewgui.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -174,6 +174,16 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="sys_log"/>
       </Unit21>
+      <Unit22>
+        <Filename Value="gui_glyphs.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="gui_glyphs"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="gui_gtk2_glyphs.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="gui_gtk2_glyphs"/>
+      </Unit23>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
